--- a/apps/analog-app/index.html
+++ b/apps/analog-app/index.html
@@ -6,8 +6,10 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="stylesheet" href="/src/styles.css" />
   </head>
   <body>
     <analog-nx-repo-root></analog-nx-repo-root>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
